--- a/resources/sass/layouts/dashboard-layout.scss
+++ b/resources/sass/layouts/dashboard-layout.scss
@@ -1,89 +1,173 @@
 #dashboard{
     display: flex;
     height: 100vh;
-}
 
-#dashboard-nav{
-
-    width: 15%;
-    height: 100%;
-    padding: 0 30px;
-    border-right: 1px solid black;
-    display: flex;
-    flex-direction: column;
-
-    & > div{
-        margin-top: 20px;
-    }
-
-    & > div:not(.restaurants){
-        flex: 0 0 auto;
-    }
-
-    .restaurants{
-        flex: 1 1 auto;
-        min-height: 100px;
-        overflow-y: auto;
-
-        .restaurants-list{
-            
-        }
-    }
-}
-
-#dashboard-main{
-
-    padding: 30px 50px;
-    width: 85%;
-    overflow-y: auto;
-
-    .restaurant-actions{
+    #dashboard-nav{
+    
+        width: 15%;
+        height: 100%;
+        padding: 0 30px;
+        border-right: 1px solid black;
         display: flex;
-        
-        form {
-            margin: 10px 30px;
+        flex-direction: column;
+    
+        & > div{
+            margin-top: 20px;
+        }
+    
+        & > div:not(.restaurants){
+            flex: 0 0 auto;
+        }
+    
+        .restaurants{
+            flex: 1 1 auto;
+            min-height: 100px;
+            overflow-y: auto;
+    
+            .restaurants-list{
+                
+            }
         }
     }
-    
-    .dishes-list{
-        
-        margin-top: 40px;
 
-
+    #dashboard-main{
     
-        ul{
-            list-style: none;
-            margin-top: 30px;
+        padding: 30px 50px;
+        width: 85%;
+        overflow-y: auto;
+    
+        .restaurant-actions{
+            display: flex;
             
-            li{
-
-                .flex-container{
-                    
-                    display: flex;
-                    align-items: center;
-                    height: 60px;
-
-                    .dish-name{
-
-                        h4{
-                            text-transform: uppercase;
-                        }
-                    }
-                    .dish-actions{
-                        display: flex;
+            form {
+                margin: 10px 30px;
+            }
+        }
+        
+        .dishes-list{
+            
+            margin-top: 40px;
+    
+            .not-visible{
+                opacity: .5;
+            }
+        
+            ul{
+                list-style: none;
+                margin-top: 30px;
                 
-                        form {
-                            margin: 10px 20px;
+                li{
+    
+                    .flex-container{
+                        
+                        display: flex;
+                        align-items: center;
+                        height: 60px;
+    
+                        .dish-name{
+    
+                            h4{
+                                text-transform: uppercase;
+                            }
+                        }
+                        .dish-actions{
+                            display: flex;
+                    
+                            form {
+                                margin: 10px 20px;
+                            }
                         }
                     }
                 }
             }
         }
     }
+
+    #chart{
+
+        .chart-btns{
+
+            display: flex;
+            margin-bottom: 50px;
+            align-items: center;
+
+            .all-restaurants-link{
+    
+                margin-right: 30px;
+    
+                div{
+                    line-height: 40px;
+                    width: 150px;
+                    text-align: center;
+                    background-color: lightcoral;
+                    color: #fff;
+                    border-radius: 5px;
+                    cursor: pointer;
+
+                    &:hover{
+                        transform: scale(1.1);
+                    }
+                }
+            }
+    
+            .year-restaurant{
+                
+                select{
+                    height: 40px;
+                    width: 150px;
+                    text-align: center;
+                    cursor: pointer;
+                    background-color: lightseagreen;
+                    -webkit-appearance: none;
+                    -moz-appearance: none;
+                    text-indent: 1px;
+                    text-overflow: '';
+                    border: none;
+                    border-radius: 5px;
+                    color: #fff;
+
+                    &:hover{
+                        opacity: .5;
+                    }
+                }
+            }
+        }
+    }
+
+    #orders-history{
+
+        ul{
+            list-style: none;
+
+            .order-card{
+                width: 500px;
+                margin: 30px;
+                box-shadow: 0 0.125rem 0.25rem rgba(0, 0, 0, 0.075);    
+                
+                .title{
+                    font-weight: 600;
+                    font-size: 1.1em;
+                }
+
+                &>div{
+                    padding: 10px 5px;
+                }
+            }
+        }
+
+        .gone{
+            box-shadow: 0 0.125rem 0.25rem lightgreen!important;    
+            border: 1px solid lightgreen;        
+        }
+
+        .todo{
+            box-shadow: 0 0.125rem 0.25rem lightcoral !important;         
+            border: 1px solid lightcoral;        
+        }
+    }
 }
 
-.not-visible{
-    opacity: .5;
-}
+
+
 
 
