--- a/resources/sass/layouts/dashboard-layout.scss
+++ b/resources/sass/layouts/dashboard-layout.scss
@@ -33,57 +33,151 @@
 
 #dashboard-main{
 
-    padding: 30px 50px;
-    width: 85%;
+
+    width: 100%;
     overflow-y: auto;
 
-    .restaurant-actions{
-        display: flex;
+    .main-content-container{
 
-        form {
-            margin: 10px 30px;
+        background: linear-gradient(45deg,rgb(87, 243, 230), #1F8691);
+        padding: 30px 50px;
+
+        .restaurant-delete-edit{
+
+            display: flex;
+
+            .protected-company-name{
+
+                display: flex;
+                align-items: center;
+                font-size: 20px;
+                font-weight: bold;
+
+            }
+
+            .restaurant-actions{
+
+                display: flex;
+
+                form {
+
+                    margin: 10px 30px;
+                }
+
+            }
         }
-    }
-
-    .dishes-list{
-
-        margin-top: 40px;
 
 
+        .dishes-list{
 
-        ul{
-            list-style: none;
-            margin-top: 30px;
+            margin-top: 40px;
 
-            li{
 
-                .flex-container{
 
-                    display: flex;
-                    align-items: center;
-                    height: 60px;
+            ul{
 
-                    .dish-name{
+                list-style: none;
+                margin-top: 30px;
 
-                        h4{
-                            text-transform: uppercase;
+                li{
+
+                    .flex-container{
+
+                        display: flex;
+                        justify-content: center;
+                        align-items: center;
+                        height: 60px;
+                        padding: 20px;
+                        background-color: white;
+                        border-radius: 5px 5px 0 0;
+                        border-bottom: 1px solid black;
+
+                        .dish-name{
+
+                            h4{
+
+                                text-transform: uppercase;
+                            }
+                        }
+
+                        .dish-actions{
+
+                            display: flex;
+
+                            form {
+
+                                margin: 10px 20px;
+                            }
                         }
                     }
-                    .dish-actions{
+
+                    .dish-info-img{
+
                         display: flex;
 
-                        form {
-                            margin: 10px 20px;
+                        .dish-info{
+
+                            width: 50%;
+
+                            .price, .type, .discount{
+
+                                padding: 10px 0;
+                                padding-left: 20px;
+                                background-color: white;
+                            }
+
+                            .ingredients{
+
+                                padding: 20px;
+                                background-color: white;
+                                border-radius: 0 0 0 5px;
+                                margin-bottom: 20px;
+                            }
                         }
+
+                        .dish-img-info{
+
+                            width: 50%;
+                            background-color: white;
+                            height: 231px;
+                            border-radius: 0 0 5px 0;
+                            display: flex;
+                            align-items: center;
+                            justify-content: center;
+
+                            img{
+
+                                height: 200px;
+                                width: 200px;
+                                border-radius: 5px;
+                            }
+                        }
+
                     }
+
+
+
+
                 }
             }
         }
+
     }
+
 }
 
 .not-visible{
     opacity: .5;
+}
+
+.protected-content-flex{
+
+    font-size: 30px;
+    font-weight: bold;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
 }
 
 
