--- a/resources/sass/layouts/home-layout.scss
+++ b/resources/sass/layouts/home-layout.scss
@@ -9,7 +9,6 @@
 .spacer-precarousel{
 
     width: 100%;
-    height: 100px;
     margin: auto;
     font-size: 25px;
     color: white;
@@ -17,6 +16,28 @@
     align-items: center;
     justify-content: center;
     background-color: #FABD12;
+
+/*     .cool-image{
+
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        width: 50%;
+
+        img{
+
+
+
+        }
+    } */
+
+    .spacer-disclaimer{
+
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        width: 50%;
+    }
 
 }
 
