--- a/resources/sass/components/main-content.scss
+++ b/resources/sass/components/main-content.scss
@@ -86,6 +86,7 @@
                             border-radius: 5px 5px 0 0;
                         }
                     }
+
                     .tempo-consegna{
                         
                         clip-path: polygon(0% 0%, 100% 0%, 100% 75%, 30% 75%, 0 100%, 15% 75%, 0% 75%);
@@ -115,6 +116,12 @@
                         .input-radio-margin{
                             margin-top: 10px;
                         }
+                    }
+
+                    .delivery-logo{
+                        position: absolute;
+                        top: 210px;
+                        right: 120px;
                     }
 
                 }
