--- a/resources/sass/layouts/main-layout.scss
+++ b/resources/sass/layouts/main-layout.scss
@@ -38,76 +38,94 @@
         position: relative;
         border-radius: 5px;
 
-        .dishes-list{
+        .menu-type{
 
-            width: 50%;
-            padding: 30px;
-            display: flex;
-            flex-wrap: wrap;
-            margin-top: 20px;
-            margin-left: 10px;
+            list-style: none;
+            width: 100%;
+            background-color: #1F8691;
+            margin: 20px;
 
-            .dish-card{
+            .type-span{
 
-                height: 150px;
-                width: 300px;
-                transition: box-shadow 0.2s ease-in-out;
-                margin-right: 20px;
-                cursor: pointer;
-                background-color: white;
-                border-radius: 5px;
-                &:hover{
+                font-size: 25px;
+                font-weight: 600;
+                color: white;
+                text-transform: uppercase;
+            }
 
-                    box-shadow: 5px 10px 18px #14555c;
-                }
 
-                .dish-card-container{
+            .dishes-list{
 
-                    height: 100%;
-                    padding: 10px;
-                    display: flex;
+                width: 50%;
+                padding: 30px;
+                display: flex;
+                flex-wrap: wrap;
+                margin-top: 20px;
+                margin-left: 10px;
 
-                      .dish-name-price{
+                .dish-card{
 
-                        display: flex;
-                        flex-direction: column;
-                        height: 100%;
-                        width: 70%;
+                    height: 150px;
+                    transition: box-shadow 0.2s ease-in-out;
+                    margin-right: 20px;
+                    cursor: pointer;
+                    background-color: white;
+                    border-radius: 5px;
+                    &:hover{
 
-                        .dish-name, .dish-price, .dish-ingr{
-
-                            display: flex;
-                            align-items: center;
-
-                        }
-                        .dish-name, .dish-price{
-
-                            min-height: 25%;
-                        }
-                        .dish-ingr{
-
-                            min-height: 50%
-
-                        }
-
+                        box-shadow: 5px 10px 18px #14555c;
                     }
 
-                    .dish-img{
+                    .dish-card-container{
 
-                        width: 30%;
-                        height: 80px;
-                        margin: auto;
+                        height: 100%;
+                        padding: 10px;
+                        display: flex;
 
-                        img{
+                        .dish-name-price{
 
-                            width: 100%;
+                            display: flex;
+                            flex-direction: column;
                             height: 100%;
-                            object-position: center;
+                            width: 70%;
+
+                            .dish-name, .dish-price, .dish-ingr{
+
+                                display: flex;
+                                align-items: center;
+
+                            }
+                            .dish-name, .dish-price{
+
+                                min-height: 25%;
+                            }
+                            .dish-ingr{
+
+                                min-height: 50%
+
+                            }
+
+                        }
+
+                        .dish-img{
+
+                            width: 30%;
+                            height: 80px;
+                            margin: auto;
+
+                            img{
+
+                                width: 100%;
+                                height: 100%;
+                                object-position: center;
+                            }
                         }
                     }
                 }
             }
         }
+
+        
 
         .container-cart{
 
@@ -115,7 +133,7 @@
             margin-right: 40px;
             margin-bottom: 30px;
             height: 50%;
-            width: 30%;
+            width: 100%;
             background: white;
             box-shadow: 5px 10px 18px #14555c;
             display: flex;
