--- a/resources/sass/layouts/main-layout.scss
+++ b/resources/sass/layouts/main-layout.scss
@@ -411,12 +411,11 @@
 
             width: 100%;
             margin: auto;
-            background-color: red;
             display: flex;
             justify-content: center;
             margin: 30px 0px;
 
-            a{
+            .button-payment{
 
                 margin: auto;
                 border-radius: 5px;
