--- a/resources/sass/components/footer.scss
+++ b/resources/sass/components/footer.scss
@@ -126,7 +126,7 @@
 
 /* ---------------media query---------------------- */
 
-$breakpoint-phone: 375px;
+/* $breakpoint-phone: 375px;
 
 @media (max-width: $breakpoint-phone ) {
 
@@ -144,4 +144,10 @@ $breakpoint-phone: 375px;
 
     }
 
+} */
+
+@media all and (max-width: 375px) {
+  .footer-card-container {
+    background-color: blue;
+  }
 }
